# TimeSeriesAggregation

./: .gitattributes  .gitignore  LICENSE  README.md  example_usage.py  pyproject.toml  requirements.txt  setup.py
data/input/: additional_tech_names.txt  capacity_mix.xlsx  df.pickle  example_usage.xlsx  possible_tech_names.py
docs/: example_usage.py
examples/: example_usage.py
src/: data_importer.py  data_processor.py  main.py  original_df.pickle
src/TSA/: __init__.py  config_manager.py  data_exporter.py  data_illustrator.py  data_importer.py  data_processor.py  main.py  utils.py
src/TSA/algorithms/: base.py  pctpc.py
src/aggregation_algorithms/: pctpc.py
tests/: clusters.pickle  test_aggregation_algorithms.py  test_data_importer.py  test_data_processor.py  test_main.py
